...

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_mealPlan"
                android:layout_width="wrap_content"
                android:layout_height="104dp"
                android:layout_rowWeight="2"
                android:layout_columnWeight="2"
                android:layout_margin="12dp"
                android:layout_marginRight="16dp"
...
